--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,10 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <netty-version>4.1.50.Final</netty-version>
   </properties>
   <dependencies>
     <dependency>
